--- a/templates/index.html
+++ b/templates/index.html
@@ -43,10 +43,10 @@
                     
                     <form action="#" class="needs-validation" method="POST">
                         <label for="etanol" class="form-label">Preço do Etanol:</label><br />
-                        <input type="text" class="form-control-lg" name="etanol" pattern="[[:digit:]]+[.][[:digit:]]+" placeholder="Formato: 0.00" required /><br />
+                        <input type="text" class="form-control-lg" name="etanol" pattern="[0-9]+[.][0-9]+" placeholder="Formato: 0.00" required /><br />
                         <!--<input type="text" class="form-control-lg" name="etanol" required onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.key === '.'" /><br />-->
                         <label for="gasolina" class="form-label">Preço da Gasolina:</label><br />
-                        <input type="text" class="form-control-lg" name="gasolina" pattern="[[:digit:]]+[.][[:digit:]]+" placeholder="Formato: 0.00" required /><br />
+                        <input type="text" class="form-control-lg" name="gasolina" pattern="[0-9]+[.][0-9]+" placeholder="Formato: 0.00" required /><br />
                         <input type="submit" class="btn btn-success" value="Calcular"/>
                     </form>
                 </div>
