correcao 269 e add latao 473

--- a/templates/cerv.html
+++ b/templates/cerv.html
@@ -41,11 +41,11 @@
                         <input type="text" class="form-control-lg" name="litrao" pattern="[0-9]+[.][0-9]+" placeholder="Formato: 0.00" value=0.0 required /><br /><br />
                         <label for="seisct" class="form-label">Garrafa de 600ml:</label><br />
                         <input type="text" class="form-control-lg" name="seisct" pattern="[0-9]+[.][0-9]+" placeholder="Formato: 0.00" value=0.0 required /><br /><br />
-                        <label for="quinci" class="form-label">Garrafa de 550ml:</label><br />
-                        <input type="text" class="form-control-lg" name="quinci" pattern="[0-9]+[.][0-9]+" placeholder="Formato: 0.00" value=0.0 required /><br /><br />
+                        <label for="latao" class="form-label">Latão de 473ml:</label><br />
+                        <input type="text" class="form-control-lg" name="latao" pattern="[0-9]+[.][0-9]+" placeholder="Formato: 0.00" value=0.0 required /><br /><br />
                 </div>
                 <div class="col-4 text-center">
-                        <label for="trezcc" class="form-label">Lata de 355ml:</label><br />
+                        <label for="trezcc" class="form-label">Long Neck de 355ml:</label><br />
                         <input type="text" class="form-control-lg" name="trezcc" pattern="[0-9]+[.][0-9]+" placeholder="Formato: 0.00" value=0.0 required /><br /><br />
                         <label for="trezci" class="form-label">Lata de 350ml:</label><br />
                         <input type="text" class="form-control-lg" name="trezci" pattern="[0-9]+[.][0-9]+" placeholder="Formato: 0.00" value=0.0 required /><br /><br />
