--- a/templates/cerv.html
+++ b/templates/cerv.html
@@ -51,12 +51,15 @@
                         <input type="text" class="form-control-lg" name="trezci" pattern="[0-9]+[.][0-9]+" placeholder="Formato: 0.00" value=0.0 required /><br /><br />
                         <label for="duzsen" class="form-label">Lata de 269ml:</label><br />
                         <input type="text" class="form-control-lg" name="duzsen" pattern="[0-9]+[.][0-9]+" placeholder="Formato: 0.00" value=0.0 required /><br /><br />
-                        <input type="submit" class="btn btn-success" value="Calcular"/>
-                </form>
                 </div>
-                </div>
-                <div class="col-2"></div>
             </div>
+            <div class="col-2"></div>
+        </div>
+        <div class="row text-center">
+                <div class="col-12">
+                        <input type="submit" class="btn btn-success" value="Calcular"/>
+                    </form>
+                </div>
         </div>
     </body>
 </html>
