inserido YT / corrigida pag cerva

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,9 @@
                     </div>
                     <div class="col-2"></div>
                 </div>
-            <div class="row">&nbsp;</div>
+            <div class="row text-center mt-3" style="background-color: rgb(54, 54, 54);"><br>
+                <pre><br>by timEU   -   <a href="https://github.com/timeuz/" target="_blank"><img src="{{url_for('static', filename='images/GitHub-Mark-32px.png')}}"></a>    <a href="https://www.linkedin.com/in/timeu-ferreira-oliveira/" target="_blank"><img src="{{url_for('static', filename='images/LI-In-Bug.png')}}" style="width: 32px;"></a>    <a href="https://www.youtube.com/@timeutech" target="_blank"><img src="{{url_for('static', filename='images/YouTube-Icon.svg')}}" style="height: 32px;"></a></pre>
+            </div>
         </div>
     </body>
 </html>
