--- a/templates/cerv.html
+++ b/templates/cerv.html
@@ -11,6 +11,7 @@
             div   {color: white;}
             p    {color: white;}
         </style>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9215253039887218" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="container-fluid">
