--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.6.1.slim.min.js" integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA=" crossorigin="anonymous"></script>
-        <title>Conversão Combustível</title>
+        <title>Convers&atilde;o Combust&iacute;vel</title>
         <meta charset="UTF-8">
         <style>
             body {background-color: black;}
@@ -24,15 +24,15 @@
                 <div class="row text-center">
                     <div class="col-2"></div>
                     <div class="col-4 text-center">
-                        <a href="/combustivel"><img src="{{url_for('static', filename='images/gas-station-fuel-svgrepo-com.svg')}}" width="30%" alt="Combustível"></a>
+                        <a href="{{ URLBASE }}/combustivel"><img src="{{ URLBASE }}{{url_for('static', filename='images/gas-station-fuel-svgrepo-com.svg')}}" width="30%" alt="Combustível"></a>
                     </div>
                     <div class="col-4 text-center">
-                        <a href="/cerva"><img src="{{url_for('static', filename='images/beer-svgrepo-com.svg')}}" width="30%" alt="Cervejas"></a>
+                        <a href="{{ URLBASE }}/cerva"><img src="{{ URLBASE }}{{url_for('static', filename='images/beer-svgrepo-com.svg')}}" width="30%" alt="Cervejas"></a>
                     </div>
                     <div class="col-2"></div>
                 </div>
             <div class="row text-center mt-3" style="background-color: rgb(54, 54, 54);"><br>
-                <pre><br>by timEU   -   <a href="https://github.com/timeuz/" target="_blank"><img src="{{url_for('static', filename='images/GitHub-Mark-32px.png')}}"></a>    <a href="https://www.linkedin.com/in/timeu-ferreira-oliveira/" target="_blank"><img src="{{url_for('static', filename='images/LI-In-Bug.png')}}" style="width: 32px;"></a>    <a href="https://www.youtube.com/@timeutech" target="_blank"><img src="{{url_for('static', filename='images/YouTube-Icon.svg')}}" style="height: 32px;"></a></pre>
+                <pre><br>by timEU   -   <a href="https://github.com/timeuz/" target="_blank"><img src="{{ URLBASE }}{{url_for('static', filename='images/GitHub-Mark-32px.png')}}"></a>    <a href="https://www.linkedin.com/in/timeu-ferreira-oliveira/" target="_blank"><img src="{{ URLBASE }}{{url_for('static', filename='images/LI-In-Bug.png')}}" style="width: 32px;"></a>    <a href="https://www.youtube.com/@timeutech" target="_blank"><img src="{{ URLBASE }}{{url_for('static', filename='images/YouTube-Icon.svg')}}" style="height: 32px;"></a></pre>
             </div>
         </div>
     </body>
